--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <nav class="header_menu">
             <a class="header_menu_link" href="/">Home</a>
-            <a class="header_menu_link" href="/">Sobre mi</a>
+            <a class="header_menu_link" href="about.html">Sobre mi</a>
         </nav>
     </header>
     <main class="presentacion">
